# teshi

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs  teshi.toml.example
.cursor/rules/: cargo-quality.mdc  cargo-workflow.mdc  git-commit-messages.mdc  github-english-policy.mdc  rust-clippy-guidance.mdc  rust-comment-policy.mdc  rust-docs.mdc  rust-errors.mdc  rust-style.mdc  rust-testing.mdc
.github/workflows/: release.yml  winget.yml
examples/: demo.feature
runner/: Cargo.toml
runner/src/: main.rs
src/: agent.rs  app.rs  bdd_nav.rs  editor_buffer.rs  gherkin.rs  gherkin_keywords.rs  highlight.rs  keymap.rs  llm.rs  main.rs  mindmap.rs  runner.rs  step_index.rs  ui.rs
src/agent/: mod.rs  tools.rs
tests/features/: editor.feature  mindmap.feature  project.feature
tests/features_demo/github_ui/: demo.feature
tests/features_zh/: editor.feature  mindmap.feature  project.feature
tests/steps/tui/: Cargo.toml
tests/steps/tui/src/: bdd.rs  driver.rs  lib.rs
winget-manifests/manifests/t/teshi-org/teshi/0.0.7/: teshi-org.teshi.installer.yaml  teshi-org.teshi.locale.en-US.yaml  teshi-org.teshi.yaml
wix/: License.rtf  main.wxs
