[package]
name = "teshi"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["runner", "tests/steps/tui"]

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.29"
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tui-tree-widget = "0.23"
unicode-width = "0.2"
